fix: line height overflow issue

--- a/components/ui/Chat/Embeds/File/File.less
+++ b/components/ui/Chat/Embeds/File/File.less
@@ -32,7 +32,6 @@
       margin: 0;
       font-family: @primary-font;
       font-size: @mini-text-size;
-      line-height: 0.9;
     }
   }
   .button {
